Fix: The margin between the open button and its container was too big

--- a/css/default.css
+++ b/css/default.css
@@ -388,7 +388,7 @@ nav a:hover .iconPlus{
 	color: #444444;
 	display: inline-block;
 	margin-right: 10px;
-	margin-top: -1px;
+	margin-top: -5px;
 	cursor:pointer;
 	background-color: #ffffff;
 	vertical-align: -webkit-baseline-middle;
